cabal-version: 3.0
name: postgresql-simple-interval
version: 0.2025.7.11
synopsis: A simple interval type for PostgreSQL.
description:
  This library provides a simple interval type for PostgreSQL. It supports
  round-tripping through Postgres without losing information.

category: Database
license: 0BSD
license-file: LICENSE.txt
maintainer: Mercury Technologies, Inc.
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  location: https://github.com/MercuryTechnologies/postgresql-simple-interval
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends:
    attoparsec ^>=0.14.4,
    base >=4.13 && <4.22,
    bytestring >=0.10.10 && <0.13,
    postgresql-simple ^>=0.7,

  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >=8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

  if impl(ghc >=9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: postgresql-simple-interval
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  build-depends:
    persistent ^>=2.17,
    scientific ^>=0.3.8,
    text >=1.2.4 && <1.3 || >=2.0 && <2.2,

  -- cabal-gild: discover source/library
  exposed-modules:
    Database.PostgreSQL.Simple.Interval
    Database.PostgreSQL.Simple.Interval.Unstable

  hs-source-dirs: source/library

test-suite postgresql-simple-interval-test-suite
  import: executable
  build-depends: hspec ^>=2.11.12
  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
